--- a/btlweb_API/css/home.css
+++ b/btlweb_API/css/home.css
@@ -300,16 +300,16 @@ footer {
     margin-left: 50px;
 }
 .btn_top{
-    border-radius: 5px;
+    border-radius: 50%;
     height: 50px;
     width: 50px;
-    background-color: #ffffff;
+    background-image: url('top.png');
+    background-size: cover;
     position: fixed;
     display: none;
     top: 80%;
     right: 10px;
     z-index: 8;
-    text-align: center;line-height: 50px;
 }
 
 .sanphamuathich {
@@ -421,19 +421,21 @@ footer {
     width: 70%; background-color:#e7e7e7;display: flex;
 }
 .danhmuc {
-    background-color: white;
-    min-height: 410px;
+    background-color: #dfdede;
+    min-height: 385.84px;
     width: 20%;
 
     && ul {
         margin-top: 0px;
-        margin-left: -40px;
+        background-color: white;
+        padding-left: 0%;
     }
 
     && ul li {
         list-style: none;
         line-height: 30px;
         border: 1px solid black;
+        height: 36.55555px;
 
     }
     && li:hover{
@@ -447,7 +449,7 @@ footer {
 }
 .slides {
     width: 100%;
-    height: 70px;
+    height: 100%;
     position: relative;
     z-index: 2;
 }
